--- a/react-front-end/src/stylesheets/TopBar/topBar.css
+++ b/react-front-end/src/stylesheets/TopBar/topBar.css
@@ -12,12 +12,14 @@
     position: sticky;
     height: 80px;
     padding-inline: 120px;
+    border-bottom: 1px solid #e9e9e9;
 }
 
-.topBar > button > img {
-    height: 100px;
-    width: 100px;
+.topBar > img {
+    height: 30px;
+    width: 30px;
     border: 0px;
+    cursor: pointer;
 }
 
 .topBar > button {
