--- a/react-front-end/src/stylesheets/TopBar/searchBar.css
+++ b/react-front-end/src/stylesheets/TopBar/searchBar.css
@@ -37,7 +37,8 @@
     height: 48px;
 }
 
-.searchBar > *:not(button) {
+.searchBar > button {
+    border: 0px;
     border-right: 1px solid #cfcfcf;
     padding-inline: 10px;
     font-family: RobotoM;
@@ -45,7 +46,7 @@
     cursor: pointer;
 }
 
-.searchBar > button {
+.searchBar > button:last-child {
     border-radius: 50%;
     width: 32px;
     height: 32px;
@@ -60,6 +61,7 @@
     height: 16px;
     position: relative;
     top: 2px;
+    right: 2px;
     filter: invert(100%) sepia(100%) saturate(100%) hue-rotate(0deg) brightness(1000%) contrast(100%);
     cursor: pointer;
 }
