--- a/react-front-end/src/stylesheets/TopBar/searchAnywhere.css
+++ b/react-front-end/src/stylesheets/TopBar/searchAnywhere.css
@@ -1,3 +1,28 @@
+@font-face {
+    font-family: PoppinsL;
+    src: url('../../assets/fonts/Poppins/Poppins-Light.ttf');
+}
+
+@font-face {
+    font-family: PoppinsB;
+    src: url('../../assets/fonts/Poppins/Poppins-Bold.ttf');
+}
+
+@font-face {
+    font-family: RobotoM;
+    src: url('../../assets/fonts/Roboto/Roboto-Medium.ttf');
+}
+
+@font-face {
+    font-family: RobotoL;
+    src: url('../../assets/fonts/Roboto/Roboto-Light.ttf');
+}
+
+@font-face {
+    font-family: RobotoB;
+    src: url('../../assets/fonts/Roboto/Roboto-Bold.ttf');
+}
+
 * { 
     padding: 0;
     margin: 0;
@@ -5,21 +30,37 @@
 }
 
 .regions {
-    width: 400px;
+    width: 500px;
+    padding-block: 20px;
     height: auto;
-    border: 1px solid black;
-    border-radius: 5px;
+    border: 1px solid #b9b9b9;
+    border-radius: 30px;
+    font-family: RobotoM;
 }
 
 .regions-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-between;
+    width: inherit;
+    justify-content:space-evenly;
     align-items: center;
     height: auto;
     row-gap: 20px;
 }
+.regions > h2 {
+    position: relative;
+    left: 20px;
+    margin-bottom: 20px;
+}
+
+.regions-container > button {
+    width: 128px;
+    height: 150px;
+    border-radius: 5px;
+    margin-inline: 10px;
+    cursor: pointer;
+}
 .regions-container > button > img {
-    width: 80px;
-    height: 80px;
+    height: 124px;
+    width: 124px;
 }
